# obelix-power-monitor

./: .gitignore  Dockerfile  README.md  cfg.json  pyproject.toml
src/: main.py
src/api/: router.py
src/api/core/: health.py
src/api/db/: power_meter.py
src/api/v1/: monitor.py  router.py
src/core/: app.py  di.py
src/db/: __init__.py  power_meter.py
src/domain/: response.py
src/domain/logging/: __init__.py  formatter.py  logging.py
src/domain/obelix/: __init__.py  obelix.py
src/infra/: di.py
src/infra/logging/: __init__.py  formatter.py  logger_store.py  types.py
src/lib/: http.py
src/lib/format/: __init__.py  strfmt.py
src/model/: response.py
src/repo/: __init__.py  power_meter.py
src/schema/: response.py
src/service/: __init__.py  containers.py  power_monitor.py
src/services/: __init__.py  power_monitor.py
